--- a/app/views/individuals/edit.html.erb
+++ b/app/views/individuals/edit.html.erb
@@ -1,15 +1,13 @@
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Editing Individual</h1></div>
-    <div class="col-md-12">
-      <%= render 'form', individual: @individual %>
-    </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12">
-      <%= link_to 'Show', @individual %>
-      <span> | </span>
-      <%= link_to 'Back', individuals_path %>
-    </div>
-    <div class="col-md-12"><br/></div>
+  <h1>Editing Individual</h1>
+  <div class="col-md-12">
+    <%= render 'form', individual: @individual %>
   </div>
+  <div class="col-md-12"><br/></div>
+  <div class="col-md-12">
+    <%= link_to 'Show', @individual %>
+    <span> | </span>
+    <%= link_to 'Back', individuals_path %>
+  </div>
+  <div class="col-md-12"><br/></div>
 </div>
