--- a/app/views/lessees/new.html.erb
+++ b/app/views/lessees/new.html.erb
@@ -1,11 +1,9 @@
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>New Lessee</h1></div>
+    <h1>New Lessee</h1>
     <div class="col-md-12">
       <%= render 'form', lessee: @lessee %>
     </div>
     <div class="col-md-12"><br/></div>
     <div class="col-md-12"><%= link_to 'Back', lessees_path %></div>
     <div class="col-md-12"><br/></div>
-  </div>
 </div>
