--- a/app/views/policies/edit.html.erb
+++ b/app/views/policies/edit.html.erb
@@ -1,13 +1,13 @@
 <div id="maincontent">
-  <h1>Editing Institution</h1>
+  <h1>Editing Policy</h1>
   <div class="col-md-12">
-    <%= render 'form', institution: @institution %>
+    <%= render 'form', policy: @policy %>
   </div>
   <div class="col-md-12"><br/></div>
   <div class="col-md-12">
-    <%= link_to 'Show', @institution %>
+    <%= link_to 'Show', @policy %>
     <span> | </span>
-    <%= link_to 'Back', institutions_path %>
+    <%= link_to 'Back', policies_path %>
   </div>
   <div class="col-md-12"><br/></div>
 </div>
