--- a/app/views/components/_form.html.erb
+++ b/app/views/components/_form.html.erb
@@ -2,6 +2,18 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :identifier %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :name %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :noid %>
+  </div>
+
+  <div class="form-inputs">
     <%= f.input :handle %>
   </div>
 
