--- a/app/views/components/_lessees.html.erb
+++ b/app/views/components/_lessees.html.erb
@@ -1,16 +1,21 @@
-<div class="row">
-  <% lessees.each do |lessee| %>
-    <div class="col-md-1">
-      <% if lessee.institution? %>
-        <span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span>
-      <% end %>
-    </div>
-    <div class="col-md-11">
-      <% if lessee.institution? %>
-        <%= lessee.institution.name %>
-      <% else %>
-        <%= lessee.identifier %>
-      <% end %>
-    </div>
-  <% end %>
-</div>
+<b>
+  <div class="col-md-10">
+    <div class="col-md-1">ID</div>
+    <div class="col-md-3">Identifier</div>
+    <div class="col-md-3">Individual</div>
+    <div class="col-md-3">Institution</div>
+    <div class="col-md-2">Products</div>
+  </div>
+  <div class="col-md-2"><%= link_to 'New Lessee', new_lessee_path %></div>
+  <hr/>
+</b>
+<% lessees.each do |lessee| %>
+  <div class="col-md-10">
+    <div class="col-md-1"><%= link_to lessee.id, lessee %></div>
+    <div class="col-md-3"><%= lessee.identifier %></div>
+    <div class="col-md-3">&nbsp<%= link_to_if lessee.individual?, lessee.individual&.name, lessee.individual %></div>
+    <div class="col-md-3">&nbsp<%= link_to_if lessee.institution?, lessee.institution&.name, lessee.institution %></div>
+    <div class="col-md-2"><%= lessee.products.count() %></div>
+  </div>
+  <div class="col-md-2"><br/></div>
+<% end %>
