--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,48 +1,39 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Components</h1></div>
-    <div class="col-md-12">
-      <div class="row">
-        <b>
-          <div class="col-md-1">ID</div>
-          <div class="col-md-3">Handle</div>
-          <div class="col-md-2">FileSet</div>
-          <div class="col-md-2">Monograph</div>
-          <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
-          <div class="col-md-2"></div>
-          <hr/>
-        </b>
-      </div>
-      <% @components.each do |component| %>
-        <div class="row">
-          <%
-            file_set = FileSet.find(component.noid) if component.file_set?
-            monograph = file_set&.parent
-            monograph ||= Monograph.find(component.noid) if component.monograph?
-          %>
-          <div class="col-md-1"><%= component.id %></div>
-          <div class="col-md-3"><%= link_to component.handle, HandleService.url(component.noid) %></div>
-          <div class="col-md-2">
-            <% if file_set.present? %>
-              <%= link_to file_set.id, hyrax_file_set_path(file_set.id) %>
-            <% end %>
-          </div>
-          <div class="col-md-2">
-            <% if monograph.present? %>
-              <%= link_to monograph.id, hyrax_monograph_path(monograph.id) %>
-            <% end %>
-          </div>
-          <div class="col-md-2">
-            <div class="col-md-4"><%= link_to 'Show', component %></div>
-            <div class="col-md-4"><%= link_to_if component.update?, 'Edit', edit_component_path(component) %></div>
-            <div class="col-md-4"><%= link_to_if component.destroy?, 'Destroy', component, method: :delete, data: { confirm: 'Are you sure?' } %></div>
-          </div>
-        </div>
-      <% end %>
+  <h1>Components</h1>
+  <b>
+    <div class="col-md-10">
+      <div class="col-md-1">ID</div>
+      <div class="col-md-1">Identifier</div>
+      <div class="col-md-2">Name</div>
+      <div class="col-md-3">Handle</div>
+      <div class="col-md-1">FileSet</div>
+      <div class="col-md-2">Monograph</div>
+      <div class="col-md-2">Products</div>
     </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= paginate @components %></div>
-    <div class="col-md-12"><br/></div>
-  </div>
+    <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
+    <div class="col-md-12"><hr/></div>
+  </b>
+  <% @components.each do |component| %>
+    <%
+      file_set = FileSet.find(component.noid) if component.file_set?
+      monograph = file_set&.parent
+      monograph ||= Monograph.find(component.noid) if component.monograph?
+    %>
+    <div class="col-md-10">
+      <div class="col-md-1"><%= component.id %></div>
+      <div class="col-md-1"><%= component.identifier %></div>
+      <div class="col-md-2"><%= component.name %></div>
+      <div class="col-md-3"><%= link_to component.handle, HandleService.url(component.noid) %></div>
+      <div class="col-md-1">&nbsp<%= link_to_if file_set.present?,file_set.id, hyrax_file_set_path(file_set.id) %></div>
+      <div class="col-md-2">&nbsp<%= link_to_if monograph.present?, monograph.id, hyrax_monograph_path(monograph.id) %></div>
+      <div class="col-md-2"><%= component.products.count() %></div>
+    </div>
+    <div class="col-md-2">
+      <div class="col-md-4"><%= link_to 'Show', component %></div>
+      <div class="col-md-4"><%= link_to_if component.update?, 'Edit', edit_component_path(component) %></div>
+      <div class="col-md-4"><%= link_to_if component.destroy?, 'Destroy', component, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+    </div>
+  <% end %>
+  <div class="col-md-12">&nbsp<%= paginate @components %></div>
 </div>
