--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -30,7 +30,7 @@
         </td>
         <td><%= institution.identifier %></td>
         <td><%= institution.name %></td>
-        <td><%= institution.entity_id %></td>
+        <td><%= link_to institution.entity_id, institution.entity_id %></td>
         <td><%= institution.policies.count() %></td>
       </tr>
     <% end %>
