--- a/app/views/individuals/index.html.erb
+++ b/app/views/individuals/index.html.erb
@@ -1,34 +1,30 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Individuals</h1></div>
-    <div class="col-md-12">
-      <div class="row">
-        <b>
-          <div class="col-md-1">ID</div>
-          <div class="col-md-3">Identifier</div>
-          <div class="col-md-3">Name</div>
-          <div class="col-md-3">EMail</div>
-          <div class="col-md-2"><%= link_to 'New Individual', new_individual_path %></div>
-          <hr/>
-        </b>
-      </div>
-      <% @individuals.each do |individual| %>
-        <div class="row">
-          <div class="col-md-1"><%= individual.id %></div>
-          <div class="col-md-3"><%= individual.identifier %></div>
-          <div class="col-md-3"><%= individual.name %></div>
-          <div class="col-md-3"><%= individual.email %></div>
-          <div class="col-md-2">
-            <div class="col-md-4"><%= link_to 'Show', individual %></div>
-            <div class="col-md-4"><%= link_to 'Edit', edit_individual_path(individual) %></div>
-            <div class="col-md-4"><%= link_to 'Destroy', individual, method: :delete, data: { confirm: 'Are you sure?' } %></div>
-          </div>
-        </div>
-      <% end %>
+  <h1>Individuals</h1>
+  <b>
+    <div class="col-md-10">
+      <div class="col-md-1">ID</div>
+      <div class="col-md-3">Identifier</div>
+      <div class="col-md-3">Name</div>
+      <div class="col-md-3">eMail</div>
+      <div class="col-md-2">Lessee</div>
     </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= paginate @individuals %></div>
-    <div class="col-md-12"><br/></div>
-  </div>
+    <div class="col-md-2"><%= link_to 'New Individual', new_individual_path %></div>
+    <div class="col-md-12"><hr/></div>
+  </b>
+  <% @individuals.each do |individual| %>
+    <div class="col-md-10">
+      <div class="col-md-1"><%= individual.id %></div>
+      <div class="col-md-3"><%= individual.identifier %></div>
+      <div class="col-md-3"><%= individual.name %></div>
+      <div class="col-md-3"><%= individual.email %></div>
+      <div class="col-md-2"><%= link_to individual.lessee.id, lessee_path(individual.lessee) %></div>
+    </div>
+    <div class="col-md-2">
+      <div class="col-md-4"><%= link_to 'Show', individual %></div>
+      <div class="col-md-4"><%= link_to_if individual.update?, 'Edit', edit_individual_path(individual) %></div>
+      <div class="col-md-4"><%= link_to_if individual.destroy?, 'Destroy', individual, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+    </div>
+  <% end %>
+  <div class="col-md-12">&nbsp<%= paginate @individuals %></div>
 </div>
