--- a/app/views/individuals/new.html.erb
+++ b/app/views/individuals/new.html.erb
@@ -1,11 +1,7 @@
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>New Individual</h1></div>
-    <div class="col-md-12">
-      <%= render 'form', individual: @individual %>
-    </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= link_to 'Back', individuals_path %></div>
-    <div class="col-md-12"><br/></div>
+  <h1>New Individual</h1>
+  <div class="col-md-12">
+    <%= render 'form', individual: @individual %>
   </div>
+  <div class="col-md-12"><%= link_to 'Back', individuals_path %></div>
 </div>
