--- a/app/views/individuals/show.html.erb
+++ b/app/views/individuals/show.html.erb
@@ -1,19 +1,26 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Individual</h1></div>
-    <div class="col-md-1"><em>Identifier</em></div>
-    <div class="col-md-11"><%= @individual.identifier %></div>
-    <div class="col-md-1"><em>Identifier</em></div>
-    <div class="col-md-11"><%= @individual.name %></div>
-    <div class="col-md-1"><em>Identifier</em></div>
-    <div class="col-md-11"><%= @individual.email %></div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12">
-      <%= link_to 'Edit', edit_individual_path(@individual) %>
-      <span> | </span>
-      <%= link_to 'Back', individuals_path %>
-    </div>
-    <div class="col-md-12"><br/></div>
+  <h1>Individual</h1>
+  <div class="col-md-1"><em>Identifier</em></div>
+  <div class="col-md-11">&nbsp<%= @individual.identifier %></div>
+  <div class="col-md-1"><em>Name</em></div>
+  <div class="col-md-11">&nbsp<%= @individual.name %></div>
+  <div class="col-md-1"><em>eMail</em></div>
+  <div class="col-md-11">&nbsp<%= @individual.email %></div>
+  <div class="col-md-12"><br/></div>
+  <h2>Lessee</h2>
+  <div class="col-md-1"><%= link_to @individual.lessee.id, lessee_path(@individual.lessee) %></div>
+  <div class="col-md-11"><%= @individual.lessee.identifier %></div>
+  <div class="col-md-12"><br/></div>
+  <h2>Policies</h2>
+  <div class="col-md-12">
+    <%= render partial: '/policies/policies', locals: { agent: @individual, policies: @individual.policies } %>
   </div>
+  <div class="col-md-12"><br/></div>
+  <div class="col-md-12">
+    <%= link_to_if @individual.update?, 'Edit', edit_individual_path(@individual) %>
+    <span> | </span>
+    <%= link_to 'Back', individuals_path %>
+  </div>
+  <div class="col-md-12"><br/></div>
 </div>
