--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -1,46 +1,30 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Institution</h1></div>
+  <h1>Institution</h1>
+  <div class="col-md-1"><em>Identifier</em></div>
+  <div class="col-md-11">&nbsp<%= @institution.identifier %></div>
+  <div class="col-md-1"><em>Name</em></div>
+  <div class="col-md-11">&nbsp<%= @institution.name %></div>
+  <div class="col-md-1"><em>Entity Id</em></div>
+  <div class="col-md-11">&nbsp<%= @institution.entity_id %></div>
+  <div class="col-md-1"><em>Site</em></div>
+  <div class="col-md-11">&nbsp<%= @institution.site %></div>
+  <div class="col-md-1"><em>Login</em></div>
+  <div class="col-md-11">&nbsp<%= @institution.login %></div>
+  <div class="col-md-12"><br/></div>
+  <h2>Lessee</h2>
+  <div class="col-md-1"><%= link_to @institution.lessee.id, lessee_path(@institution.lessee) %></div>
+  <div class="col-md-11"><%= @institution.lessee.identifier %></div>
+  <div class="col-md-12"><br/></div>
+  <h2>Policies</h2>
+  <div class="col-md-12">
+    <%= render partial: '/policies/policies', locals: { agent: @institution, policies: @institution.policies } %>
   </div>
-  <div class="row">
-    <div class="col-md-1"><em>Identifier</em></div>
-    <div class="col-md-11"><%= @institution.identifier %></div>
+  <div class="col-md-12"><br/></div>
+  <div class="col-md-12">
+    <%= link_to_if @institution.update?, 'Edit', edit_institution_path(@institution) %>
+    <span> | </span>
+    <%= link_to 'Back', institutions_path %>
   </div>
-  <div class="row">
-    <div class="col-md-1"><em>Name</em></div>
-    <div class="col-md-11"><%= @institution.name %></div>
-  </div>
-  <div class="row">
-    <div class="col-md-1"><em>Entity Id</em></div>
-    <div class="col-md-11"><%= @institution.entity_id %></div>
-  </div>
-  <div class="row">
-    <div class="col-md-1"><em>Site</em></div>
-    <div class="col-md-11"><%= @institution.site %></div>
-  </div>
-  <div class="row">
-    <div class="col-md-1"><em>Login</em></div>
-    <div class="col-md-11"><%= @institution.login %></div>
-  </div>
-  <% if @institution.lessee? %>
-    <div class="row">
-      <div class="col-md-12"><h2>Policies</h2></div>
-      <div class="col-md-12"><%= render partial: '/policies/policies', locals: { agent: @institution, policies: @institution.policies } %></div>
-    </div>
-    <div class="row">
-      <div class="col-md-12"><h2>Lessee</h2></div>
-      <div class="col-md-1"><%= link_to @institution.lessee.id, lessee_path(@institution.lessee) %></div>
-      <div class="col-md-11"><%= @institution.lessee.identifier %></div>
-    </div>
-  <% end %>
-  <div class="row">
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12">
-      <%= link_to_if @institution.update?, 'Edit', edit_institution_path(@institution) %>
-      <span> | </span>
-      <%= link_to 'Back', institutions_path %>
-    </div>
-    <div class="col-md-12"><br/></div>
-  </div>
+  <div class="col-md-12"><br/></div>
 </div>
