--- a/app/views/policies/_policies.html.erb
+++ b/app/views/policies/_policies.html.erb
@@ -2,9 +2,9 @@
   <div class="col-md-10">
     <div class="col-md-1">ID</div>
     <div class="col-md-3">Agent</div>
-    <div class="col-md-4">Credential</div>
+    <div class="col-md-3">Credential</div>
     <div class="col-md-3">Resource</div>
-    <div class="col-md-1">Zone</div>
+    <div class="col-md-2">Zone</div>
   </div>
   <div class="col-md-2"><%= link_to 'New Policy', new_policy_path %></div>
   <hr/>
@@ -13,14 +13,19 @@
   <div class="col-md-10">
     <div class="col-md-1"><%= link_to policy.id, policy %></div>
     <div class="col-md-3"><%= link_to policy.agent.identifier, policy.agent %></div>
-    <div class="col-md-4"><%= policy.credential_token %></div>
+    <div class="col-md-3"><%= policy.credential_token %></div>
     <div class="col-md-3"><%= link_to policy.resource.identifier, policy.resource %></div>
-    <div class="col-md-1"><%= policy.zone_id %></div>
+    <div class="col-md-2"><%= policy.zone_id %></div>
   </div>
+<!--  <div class="col-md-2">-->
+    <%#= link_to(policy_path(policy), method: :delete, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
+<!--      <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Destroy-->
+    <%# end %>
+<!--  </div>-->
   <div class="col-md-2">
-    <%= link_to(policy_path(policy), method: :delete, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
-      <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Destroy
-    <% end %>
+    <div class="col-md-4"><%= link_to 'Show', policy %></div>
+    <div class="col-md-4"><%= link_to_if policy.update?, 'Edit', edit_policy_path(policy) %></div>
+    <div class="col-md-4"><%= link_to_if policy.destroy?, 'Destroy', policy, method: :delete, data: { confirm: 'Are you sure?' } %></div>
   </div>
 <% end %>
 
