--- a/app/views/products/_components.html.erb
+++ b/app/views/products/_components.html.erb
@@ -1,15 +1,30 @@
 <b>
   <div class="col-md-10">
     <div class="col-md-1">ID</div>
-    <div class="col-md-11">Handle</div>
+    <div class="col-md-1">Identifier</div>
+    <div class="col-md-2">Name</div>
+    <div class="col-md-3">Handle</div>
+    <div class="col-md-1">FileSet</div>
+    <div class="col-md-2">Monograph</div>
+    <div class="col-md-2">Products</div>
   </div>
   <div class="col-md-2"><%= link_to 'New Component', new_component_path %></div>
-  <hr/>
+  <div class="col-md-12"><hr/></div>
 </b>
 <% components.each do |component| %>
+  <%
+    file_set = FileSet.find(component.noid) if component.file_set?
+    monograph = file_set&.parent
+    monograph ||= Monograph.find(component.noid) if component.monograph?
+  %>
   <div class="col-md-10">
     <div class="col-md-1"><%= link_to component.id, component %></div>
-    <div class="col-md-11"><%= link_to component.handle, HandleService.url(HandleService.noid(component.handle)) %></div>
+    <div class="col-md-1"><%= component.identifier %></div>
+    <div class="col-md-2"><%= component.name %></div>
+    <div class="col-md-3"><%= link_to component.handle, HandleService.url(component.noid) %></div>
+    <div class="col-md-1">&nbsp<%= link_to_if file_set.present?,file_set.id, hyrax_file_set_path(file_set.id) %></div>
+    <div class="col-md-2">&nbsp<%= link_to_if monograph.present?, monograph.id, hyrax_monograph_path(monograph.id) %></div>
+    <div class="col-md-2"><%= component.products.count() %></div>
   </div>
   <div class="col-md-2">
     <%= link_to(product_component_path(product, component), method: :delete, class: "btn btn-default") do %>
@@ -20,8 +35,9 @@
 <% if product.not_components.present? %>
   <%= form_tag(product_components_path(product), method: "post") do %>
     <div class="col-md-10">
-      <div class="col-md-1"></div>
-      <div class="col-md-11"><%= select_tag "id", options_from_collection_for_select(product.not_components, "id", "handle") %></div>
+      <div class="col-md-5">&nbsp</div>
+      <div class="col-md-3"><%= select_tag "id", options_from_collection_for_select(product.not_components, "id", "handle") %></div>
+      <div class="col-md-4">&nbsp</div>
     </div>
     <div class="col-md-2">
       <%= button_tag(type: 'submit', class: 'btn btn-default') do %>
