--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,34 +1,28 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Products</h1></div>
-    <div class="col-md-12">
-      <div class="row">
-        <b>
-          <div class="col-md-1">ID</div>
-          <div class="col-md-2">Identifier</div>
-          <div class="col-md-3">Name</div>
-          <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
-          <div class="col-md-4"></div>
-          <hr/>
-        </b>
-      </div>
-      <% @products.each do |product| %>
-        <div class="row">
-          <div class="col-md-1"><%= product.id %></div>
-          <div class="col-md-2"><%= product.identifier %></div>
-          <div class="col-md-3"><%= product.name %></div>
-          <div class="col-md-2">
-            <div class="col-md-4"><%= link_to 'Show', product %></div>
-            <div class="col-md-4"><%= link_to_if product.update?, 'Edit', edit_product_path(product) %></div>
-            <div class="col-md-4"><%= link_to_if product.destroy?, 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
-          </div>
-          <div class="col-md-4"></div>
-        </div>
-      <% end %>
+  <h1>Products</h1>
+  <b>
+    <div class="col-md-10">
+      <div class="col-md-1">ID</div>
+      <div class="col-md-3">Identifier</div>
+      <div class="col-md-6">Name</div>
+      <div class="col-md-2">Components</div>
     </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= paginate @products %></div>
-    <div class="col-md-12"><br/></div>
-  </div>
+    <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
+    <div class="col-md-12"><hr/></div>
+  </b>
+  <% @products.each do |product| %>
+    <div class="col-md-10">
+      <div class="col-md-1"><%= product.id %></div>
+      <div class="col-md-3"><%= product.identifier %></div>
+      <div class="col-md-6"><%= product.name %></div>
+      <div class="col-md-2"><%= product.components.count() %></div>
+    </div>
+    <div class="col-md-2">
+      <div class="col-md-4"><%= link_to 'Show', product %></div>
+      <div class="col-md-4"><%= link_to_if product.update?, 'Edit', edit_product_path(product) %></div>
+      <div class="col-md-4"><%= link_to_if product.destroy?, 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+    </div>
+  <% end %>
+  <div class="col-md-12">&nbsp<%= paginate @products %></div>
 </div>
