--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,30 @@
 <p id="notice"><%= notice %></p>
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>Product</h1></div>
-    <div class="col-md-1"><em>Identifier</em></div>
-    <div class="col-md-11"><%= @product.identifier %></div>
-    <div class="col-md-1"><em>Name</em></div>
-    <div class="col-md-11"><%= @product.name %></div>
-    <div class="col-md-1"><em>Purchase</em></div>
-    <div class="col-md-11"><%= @product.purchase %></div>
-    <div class="col-md-12"><h2>Components</h2></div>
-    <div class="col-md-12">
-      <%= render partial: 'components', locals: { product: @product, components: @product.components } %>
-    </div>
-    <div class="col-md-12"><h2>Policies</h2></div>
-    <div class="col-md-12">
-      <%= render partial: '/policies/policies', locals: { resource: @product, policies: @product.policies } %>
-    </div>
-    <div class="col-md-12"><h2>Lessees</h2></div>
-    <div class="col-md-12">
-      <%= render partial: 'lessees', locals: { product: @product, lessees: @product.lessees } %>
-    </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12">
-      <%= link_to_if @product.update?, 'Edit', edit_product_path(@product) %>
-      <span> | </span>
-      <%= link_to 'Back', products_path %>
-    </div>
-    <div class="col-md-12"><br/></div>
+  <h1>Product</h1>
+  <div class="col-md-1"><em>Identifier</em></div>
+  <div class="col-md-11">&nbsp<%= @product.identifier %></div>
+  <div class="col-md-1"><em>Name</em></div>
+  <div class="col-md-11">&nbsp<%= @product.name %></div>
+  <div class="col-md-1"><em>Purchase</em></div>
+  <div class="col-md-11">&nbsp<%= @product.purchase %></div>
+  <div class="col-md-12"><br/></div>
+  <h2>Components</h2>
+  <div class="col-md-12">
+    <%= render partial: 'components', locals: { product: @product, components: @product.components } %>
   </div>
+  <h2>Lessees</h2>
+  <div class="col-md-12">
+    <%= render partial: 'lessees', locals: { product: @product, lessees: @product.lessees } %>
+  </div>
+  <h2>Policies</h2>
+  <div class="col-md-12">
+    <%= render partial: '/policies/policies', locals: { resource: @product, policies: @product.policies } %>
+  </div>
+  <div class="col-md-12"><br/></div>
+  <div class="col-md-12">
+    <%= link_to_if @product.update?, 'Edit', edit_product_path(@product) %>
+    <span> | </span>
+    <%= link_to 'Back', products_path %>
+  </div>
+  <div class="col-md-12"><br/></div>
 </div>
