--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,9 @@
 <div id="maincontent">
-  <div class="row">
-    <div class="col-md-12"><h1>New User</h1></div>
-    <div class="col-md-12">
-      <%= render 'form', user: @user %>
-    </div>
-    <div class="col-md-12"><br/></div>
-    <div class="col-md-12"><%= link_to 'Back', users_path %></div>
-    <div class="col-md-12"><br/></div>
+  <h1>New User</h1>
+  <div class="col-md-12">
+    <%= render 'form', user: @user %>
   </div>
+  <div class="col-md-12"><br/></div>
+  <div class="col-md-12"><%= link_to 'Back', users_path %></div>
+  <div class="col-md-12"><br/></div>
 </div>
