--- a/app/views/fulcrum/_dashboard.html.erb
+++ b/app/views/fulcrum/_dashboard.html.erb
@@ -1,7 +1,22 @@
 <h1>Dashboard</h1>
+<h2>User</h2>
 <ul>
- <li><%= current_user.email %></li>
-<% current_institutions.each do |institution| %>
-  <li><%= institution.name %></li>
-<% end %>
+  <li><%= current_user.email %></li>
 </ul>
+<h2>Instituions</h2>
+<ul>
+  <% current_institutions.each do |institution| %>
+    <li><%= institution.name %></li>
+  <% end %>
+</ul>
+<h2>Keycard</h2>
+<ul>
+  <% Services.request_attributes.for(request).all.each do |key, value| %>
+    <li><%= key.to_s %>: <%= value.to_s %></li>
+  <% end %>
+</ul>
+<h2>Token</h2>
+<%= text_field(:user, :token, size: 120, value: current_user.token, disabled: true) %>
+<h2>Policies</h2>
+<%= render partial: '/policies/policies', locals: { agent: current_user, policies: current_user.policies } %>
+
