--- a/app/views/components/_products.html.erb
+++ b/app/views/components/_products.html.erb
@@ -1,22 +1,34 @@
-<div class="row">
-  <% products.each do |product| %>
+<b>
+  <div class="col-md-10">
+    <div class="col-md-1">ID</div>
+    <div class="col-md-5">Identifier</div>
+    <div class="col-md-6"></div>
+  </div>
+  <div class="col-md-2"><%= link_to 'New Product', new_product_path %></div>
+  <hr/>
+</b>
+<% products.each do |product| %>
+  <div class="col-md-10">
     <div class="col-md-1"><%= link_to product.id, product %></div>
-    <div class="col-md-5"><%= product.identifier %></div>
-    <div class="col-md-6">
-      <%= link_to(component_product_path(component, product), method: :delete, class: "btn btn-default") do %>
-        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove
+    <div class="col-md-11"><%= product.identifier %></div>
+  </div>
+  <div class="col-md-2">
+    <%= link_to(component_product_path(component, product), method: :delete, class: "btn btn-default") do %>
+      <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove
+    <% end %>
+  </div>
+<% end %>
+<% if component.not_products.present? %>
+  <%= form_tag(component_products_path(component), method: "post") do %>
+    <div class="col-md-10">
+      <div class="col-md-1"></div>
+      <div class="col-md-11"><%= select_tag "id", options_from_collection_for_select(component.not_products, "id", "identifier") %></div>
+    </div>
+    <div class="col-md-2">
+      <%= button_tag(type: 'submit',  class: 'btn btn-default') do %>
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
       <% end %>
     </div>
   <% end %>
-  <% if component.not_products.present? %>
-    <%= form_tag(component_products_path(component), method: "post") do %>
-      <div class="col-md-1"></div>
-      <div class="col-md-5"><%= select_tag "id", options_from_collection_for_select(component.not_products, "id", "identifier") %></div>
-      <div class="col-md-6">
-        <%= button_tag(type: 'submit',  class: 'btn btn-default') do %>
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
-        <% end %>
-      </div>
-    <% end %>
-  <% end %>
-</div>
+<% end %>
+
