--- a/app/views/fulcrum/_product.html.erb
+++ b/app/views/fulcrum/_product.html.erb
@@ -1,32 +1,30 @@
 <% product = Product.find_by(identifier: @identifier) %>
 <h1>Product</h1>
-<table class="table table-striped" summary="Product Detail">
-  <tr>
-    <th>Key</th>
-    <th>Value</th>
-  </tr>
-  <tr>
-    <td>identifier</td>
-    <td><%= product.identifier %></td>
-  </tr>
-  <tr>
-    <td>name</td>
-    <td><%= product.name %></td>
-  </tr>
-  <tr>
-    <td>purchase</td>
-    <td><%= product.purchase %></td>
-  </tr>
-</table>
+<div class="col-md-12">
+  <table class="table table-striped" summary="Product Detail">
+    <tr>
+      <th>Key</th>
+      <th>Value</th>
+    </tr>
+    <tr>
+      <td>identifier</td>
+      <td><%= product.identifier %></td>
+    </tr>
+    <tr>
+      <td>name</td>
+      <td><%= product.name %></td>
+    </tr>
+    <tr>
+      <td>purchase</td>
+      <td><%= product.purchase %></td>
+    </tr>
+  </table>
+</div>
 <h2>Components</h2>
-<ul>
-  <% product.components.each do |component| %>
-    <li><%= component.noid %></li>
-  <% end %>
-</ul>
+<div class="col-md-12">
+  <%= render partial: '/products/components', locals: { product: product, components: product.components } %>
+</div>
 <h2>Policies</h2>
-<ul>
-  <% product.policies.each do |policy| %>
-    <li><%= policy.id %></li>
-  <% end %>
-</ul>
+<div class="col-md-12">
+  <%= render partial: '/policies/policies', locals: { resource: product, policies: product.policies } %>
+</div>
