--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -26,7 +26,7 @@
   <% if @institution.lessee? %>
     <div class="row">
       <div class="col-md-12"><h2>Policies</h2></div>
-      <div class="col-md-12"><%= render partial: 'policies', locals: { institution: @institution, policies: @institution.policies } %></div>
+      <div class="col-md-12"><%= render partial: '/policies/policies', locals: { agent: @institution, policies: @institution.policies } %></div>
     </div>
     <div class="row">
       <div class="col-md-12"><h2>Lessee</h2></div>
