--- a/app/views/products/_lessees.html.erb
+++ b/app/views/products/_lessees.html.erb
@@ -1,15 +1,22 @@
 <div class="row">
+  <div class="row">
+    <b>
+      <div class="col-md-8">
+        <div class="col-md-1">ID</div>
+        <div class="col-md-5">Identifier</div>
+        <div class="col-md-6">Name</div>
+      </div>
+      <div class="col-md-2"><%= link_to 'New Lessee', new_lessee_path %></div>
+      <hr/>
+    </b>
+  </div>
   <% lessees.each do |lessee| %>
-    <div class="col-md-1">
-      <%= link_to lessee.id, lessee %>
+    <div class="col-md-8">
+      <div class="col-md-1"><%= link_to lessee.id, lessee %></div>
+      <div class="col-md-5"><%= lessee.identifier %></div>
+      <div class="col-md-6"><% if lessee.institution? %><%= lessee.institution.name %><% end %></div>
     </div>
-    <div class="col-md-5">
-      <%= lessee.identifier %>
-      <% if lessee.institution? %>
-        <%= lessee.institution.name %>
-      <% end %>
-    </div>
-    <div class="col-md-6">
+    <div class="col-md-2">
       <%= link_to(product_lessee_path(product, lessee), method: :delete, class: "btn btn-default") do %>
         <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove
       <% end %>
@@ -17,9 +24,11 @@
   <% end %>
   <% if product.not_lessees.present? %>
     <%= form_tag(product_lessees_path(product), method: :post) do %>
-      <div class="col-md-1"></div>
-      <div class="col-md-5"><%= select_tag "id", options_from_collection_for_select(product.not_lessees, "id", "identifier") %></div>
-      <div class="col-md-6">
+      <div class="col-md-8">
+        <div class="col-md-1"></div>
+        <div class="col-md-11"><%= select_tag "id", options_from_collection_for_select(product.not_lessees, "id", "identifier") %></div>
+        </div>
+      <div class="col-md-2">
         <%= button_tag(type: 'submit', class: 'btn btn-default') do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
         <% end %>
