--- a/app/views/counter_reports/without_customer_id/master_view/_form.html.erb
+++ b/app/views/counter_reports/without_customer_id/master_view/_form.html.erb
@@ -1,4 +1,4 @@
-<form action=<%= counter_report_path(id: 'tr') %> method="show">
+<form action=<%= counter_report_path(id: report_id) %> method="show">
   <div class="form-group row">
     <label for="institution" class="col-sm-2 col-form-label">Institution</label>
     <div class="col-sm-2">
